# ipfs-monitor

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ipfs_monitor/: app.py  monitor.py  reports.py
ipfs_monitor/templates/: index.html
