[tool.poetry]
name = "ipfs-monitor"
version = "0.1.0"
description = ""
authors = ["Tomasz Karbownicki <tomasz@karbownicki.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
ipfshttpclient = "^0.4.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
flake8-isort = "^2.8.0"
ipython = "^7.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
